tests/ui/issues/issue-7970a.stderr
error: unexpected end of macro invocation
  --> $DIR/issue-7970a.rs:6:5
   |
LL | macro_rules! one_arg_macro {
   | -------------------------- when calling this macro
...
LL |     one_arg_macro!();
   |     ^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$fmt:expr`
  --> $DIR/issue-7970a.rs:2:6
   |
LL |     ($fmt:expr) => (print!(concat!($fmt, "\n")));
   |      ^^^^^^^^^

error: aborting due to previous error

